k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: justbooks
  namespace: justbooks
spec:
  type: ClusterIP
  selector:
    app: justbooks
  ports:
    - port: 80
      targetPort: 8000
