k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: justbooks
  namespace: justbooks
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: justbooks.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: justbooks
                port:
                  number: 80
